@@ -282,6 +282,10 @@ $backends['sieve'] = array(
                 // 'imap4flags'.
                 // 'imapflags' => true,
 
+                // If true, use the deprecated 'notify' extension instead of
+                // the newer, standardized 'enotify'.
+                // 'notify' => true,
+
                 // If using Dovecot or any other Sieve implementation that
                 // requires folder names to be UTF-8 encoded, set this
                 // parameter to true.
