@@ -55,9 +55,13 @@ e-mail address to pre-populate into a new rule.
 Backend Configuration (backends.php)
 ------------------------------------
 
+The Sieve driver now uses the 'enotify' extension by default. If using an
+old version of Sieve that only supports the deprecated 'notify' setting, set
+'notify' to true in the sieve script parameters (see backends.php).
+
 The Sieve driver now uses 'imap4flags' by default to set flags. If using an
-old version of Sieve that supports the deprecated 'imapflags' setting, set
-'imapflags' to true in the sieve script parameters (see backends.php).
+old version of Sieve that only supports the deprecated 'imapflags' setting,
+set 'imapflags' to true in the sieve script parameters (see backends.php).
 
 
 Configuration Options (conf.php)
