@@ -33,6 +33,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [mms] Use standardized &apos;enotify&apos; sieve extension (RFC 5435) by default instead of deprecated &apos;notify&apos; extension (Request #8784).
 * [mms] Use standardized &apos;imap4flags&apos; sieve extension (RFC 5232) by default instead of deprecated &apos;imapflags&apos; extension (Request #8784).
 * [mms] Add ability to filter rules by mailbox.
 * [mms] Add &apos;max_forward&apos; permission (Request #10332).
